增加Java对比